--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "**/{aura|lwc}/**": [
       "eslint"
     ]
+  },
+  "dependencies": {
+    "@salesforce-ux/design-system": "^2.15.8"
   }
 }
